# bender_manipulacion

./: requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lib/bender_description/: cylinder_marker.py
install/lib/bender_moveit_scripts/: move_grippers  move_groups_control  move_head  move_left_arm  move_right_arm  moveit_target_pose  pick_and_place  publish_target_pose  skills
install/lib/bender_pick_place_cpp/: add_table  mtc_node  pick_place_debug  pick_place_demo
install/share/bender_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/bender_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/bender_moveit_scripts/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/bender_pick_place_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/shoulder_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: Dockerfile  build_image.sh
src/bender_description/: CMakeLists.txt  package.xml  setup.py
src/bender_description/bender_description/: cylinder_marker.py  global_motion_planner.py  prueba1.py
src/bender_description/config/: colors.yaml  ompl_planning.yaml
src/bender_description/config/controllers/: initial_position.yaml
src/bender_description/config/controllers/gazebo_controllers/: right_arm.yaml  right_gripper.yaml
src/bender_description/config/controllers/moveit_controllers/: head_controller.yaml  left_arm_controller.yaml  left_gripper_controller.yaml
src/bender_description/launch/: bender_moveit_rviz.launch.py  display.launch.py  rsp.launch.py
src/bender_description/urdf/: bender.xacro  bender.xml  materials.xacro  rgbd_camera.xacro
src/bender_description/worlds/: empty.world
src/bender_moveit_config/: CMakeLists.txt
src/bender_moveit_config/config/: bender.ros2_control.xacro  bender.srdf  bender.urdf.xacro
src/bender_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py
src/bender_moveit_scripts/: setup.cfg  setup.py
src/bender_moveit_scripts/bender_moveit_scripts/: move_right_arm.py  moveit_target_pose.py  pick_and_place.py  publish_target_pose.py  skills.py
src/bender_pick_place_cpp/: CMakeLists.txt
src/bender_pick_place_cpp/launch/: pick_place_demo.launch.py  pick_place_demo.py
src/bender_pick_place_cpp/src/: add_table.cpp  bender_pick_and_place.cpp  mtc_node.cpp
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/mtc_tutorial/src/: mtc_node.cpp
src/shoulder_interface/: package.xml  setup.cfg  setup.py
(+45 files in other folders)
